--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ authors = ["Parnassius <Parnassius@users.noreply.github.com>"]
 [tool.poetry.dependencies]
 python = "^3.11"
 discord-py = "2.3.1"
-mafic = "2.9.2"
 typenv = "0.2.0"
+wavelink = "2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.7.0"
