--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,48 +1,34 @@
+[project]
+name = "discord-music-bot"
+version = "0.1.0"
+requires-python = ">=3.12"
+dependencies = [
+    "discord-py==2.4.0",
+    "typenv==0.2.0",
+    "wavelink==3.2.0",
+]
+
+[project.scripts]
+discord-music-bot = "discord_music_bot.__main__:main"
+
+[dependency-groups]
+dev = [
+    "mypy==1.14.1",
+    "ruff==0.8.4",
+]
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 
 [tool.mypy]
+python_version = "3.12"
 strict = true
 
 show_error_codes = true
 warn_unreachable = true
 
-
-[tool.poe.tasks]
-ruff-fix = "ruff check src --fix-only"
-ruff-format = "ruff format src"
-format = ["ruff-fix", "ruff-format"]
-
-mypy = "mypy src"
-ruff = "ruff check src"
-all = ["format", "mypy", "ruff"]
-
-
-[tool.poetry]
-name = "discord-music-bot"
-version = "0.1.0"
-description = ""
-authors = ["Parnassius <Parnassius@users.noreply.github.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.12"
-discord-py = "2.4.0"
-typenv = "0.2.0"
-wavelink = "3.2.0"
-
-[tool.poetry.group.dev.dependencies]
-mypy = "1.14.1"
-poethepoet = "0.32.0"
-ruff = "0.8.4"
-
-[tool.poetry.scripts]
-discord-music-bot = "discord_music_bot.__main__:main"
-
-
-[tool.ruff]
-target-version = "py312"
 
 [tool.ruff.lint]
 select = [
